@@ -11,6 +11,7 @@ from sqlalchemy.dialects.oracle import cx_oracle, base as oracle
 from sqlalchemy.engine import default
 from sqlalchemy.util import jython
 from decimal import Decimal
+import datetime
 import os
 
 
@@ -384,6 +385,7 @@ class ConstraintTest(TestBase):
         
 class TypesTest(TestBase, AssertsCompiledSQL):
     __only_on__ = 'oracle'
+    __dialect__ = oracle.OracleDialect()
 
     def test_no_clobs_for_string_params(self):
         """test that simple string params get a DBAPI type of VARCHAR, not CLOB.
@@ -466,6 +468,31 @@ class TypesTest(TestBase, AssertsCompiledSQL):
         finally:
             t1.drop()
     
+    def test_interval(self):
+
+        for type_, expected in [
+            (oracle.INTERVAL(), "INTERVAL DAY TO SECOND"),
+            (oracle.INTERVAL(day_precision=3), "INTERVAL DAY(3) TO SECOND"),
+            (oracle.INTERVAL(second_precision=5), "INTERVAL DAY TO SECOND(5)"),
+            (oracle.INTERVAL(day_precision=2, second_precision=5), "INTERVAL DAY(2) TO SECOND(5)"),
+        ]:
+            self.assert_compile(type_, expected)
+        
+        metadata = MetaData(testing.db)
+        interval_table = Table("intervaltable", metadata,
+            Column("id", Integer, primary_key=True, test_needs_autoincrement=True),
+            Column("day_interval", oracle.INTERVAL(day_precision=3)),
+            )
+        metadata.create_all()
+        try:
+            interval_table.insert().execute(
+                day_interval=datetime.timedelta(days=35, seconds=5743),
+            )
+            row = interval_table.select().execute().first()
+            eq_(row['day_interval'], datetime.timedelta(days=35, seconds=5743))
+        finally:
+            metadata.drop_all()
+        
     def test_numerics(self):
         m = MetaData(testing.db)
         t1 = Table('t1', m, 
